[package]
name = "tarpc-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
futures = "0.3.25"
serde = "1.0.147"
tarpc = { version = "0.30.0", features = ["full"] }
tokio = { version = "1.21.2", features = ["full"] }
tokio-serde = "0.8.0"
